# TRAILS-Database-Native-Model-Selection

./: .gitignore  .gitmodules  Dockerfile  README.md  env.yml  file-0  file-1  file-2  file-3  file-4  file-5  file-6  file-7  file-8  init_env  main.py  ori_env.yaml  reproduce.md  req_torch15.txt  req_torch18.txt  requirement.txt  requirements.txt  requirementsORI.txt  run_script  setup.sh  vote.py  zexp.md
backup/: phase2.py
data/: README.md
deployment/: fsnas.Dockerfile
documents/: Dockerfile_backup  config_ssh  dev_guide.md  modelSelection.key  model_slcing.md  polardb.md
documents/paper/: introduction.md
exp_files/: micro_phase2_ImageNet16-120  micro_phase2_cifar10
exps/main_sigmod/: eva_run_p1_only_100_run.sh  log_in_server.sh  measure_train_1_epoch_time.sh  measure_train_1_epoch_time_result  score_all_modesl_criteo.sh  score_all_modesl_frappe.sh  score_all_modesl_uci.sh  tm_criteo_xai.sh  tmp_criteo_panda.sh  train_all_models_criteo.sh  train_all_models_criteo_decide_params.sh  train_all_models_criteo_distirbuted.sh  (+9 more)
internal/pg-extension/: Cargo.toml
internal/pg-extension/src/: lib.rs
internal/pg-extension/src/bindings/: bdfile.rs
main/: benchmark.py  benchmark_one_arch.py  draw.py  main.py  measure.py  reformat.py  result.py
result_base/: README.md
scripts/: 0.process.py  4. vote.go  5. vote_result.py  buggy  fetch.sh  nas201-cor.py  nb101_from_zerocost.py  read_file.py  retrive_train_baseline.sh  run.sh  sync.sh  sync_ciidaa.sh  sync_panda.sh  sync_pandax1.sh  sync_pandax2.sh  sync_xai.sh  syncs1.sh
z_dev/: sync.sh  zexp.md
(+627 files in other folders)
